# enstrag

./: .gitignore  Dockerfile  Dockerfilefront  LICENSE  README.md  docker-compose.yml  pull_request_template.md  pyproject.toml  rag_env.yaml  requirements.txt
.github/workflows/: ci.yml  pytest.yml
ExtractionTexte/: extraction_texte_pdf.py
ExtractionTexte/Output/: output.txt
dataset/: dataset_algebraic_geometry.json  dataset_chemistry.json  dataset_machine_learning.json  push_dataset_to_hub.py
enstrag/: __init__.py  __main__.py
enstrag/back/: api.py
enstrag/data/: __init__.py  parser.py  raptor_vectordb.py  vectordb.py
enstrag/data/raptor/: cluster_utils.py
enstrag/explanation/: compare.py  generate.py  perturber.py  pipeline.py  utils.py
enstrag/front/: __init__.py  __main__.py  agent_client.py  base_front.py  console.py  flask_front.py  gradio.py  gradio_front.py  nginx.conf  utils.py
enstrag/front/gradio_component/: __init__.py  admin_panel_gradio.py  question_answer.py
enstrag/front/static/: style.css
enstrag/front/templates/: index.html
enstrag/metrics/: chunks_evaluation.py  corr_llmscore_percenteval.py  evaluate_csv_chunks.py  evaluation.py  parse_chunk.py  results.csv  results_euclidean_distance.csv  results_manhattan_distance.csv  results_with_score.csv  results_without_rag.csv  test.csv
enstrag/metrics/evaluation_datasets/: dataset_classical_mechanics.json  final_dataset.json
enstrag/models/: __init__.py  available_models.py  embedding.py  pipeline.py
enstrag/rag/: __init__.py  agent.py
scripts/: embeddings_study.py  gradio_tests.py  parsing.py  pymupdf.py  raptor.py  test_pymupdf.py  test_retrieval.py  testing_parsing.py
src/: __main__.py
src/data/: parser.py  vectordb.py
src/models/: __init__.py
tests/: test_parser.py  test_parsing.py  test_retrieval.py
